--- a/src/index.css
+++ b/src/index.css
@@ -1,102 +1,137 @@
 * {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-  font-family: "Roboto Mono", monospace;
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    font-family: "Roboto Mono", monospace;
 }
 
 :root {
-  --cor1: #333;
+    --cor1: #333;
 }
 
 .card-Youtube {
-  background-color: #F1C2B0;
+    background-color: #f1c2b0;
 }
 .card-Tiktok {
-  background-color: #F9EB98;
+    background-color: #f9eb98;
 }
 .card-Facebook {
-  background-color: #C0D9DD;
+    background-color: #c0d9dd;
 }
 .card-Instagram {
-  background-color: #6975E8;
+    background-color: #6975e8;
 }
 
 .main-sobre {
-  display: flex;
-  gap: 2rem;
-  justify-content: space-around;
+    display: flex;
+    gap: 2rem;
+    justify-content: space-around;
 }
 
 .texts {
-  display: flex;
-  flex-direction: column;
-  max-width: 36rem;
-  gap: 2rem;
+    display: flex;
+    flex-direction: column;
+    max-width: 36rem;
+    gap: 2rem;
 }
 
 .title {
-  font-size: 3.75rem;
-  color: var(--cor1);
+    font-size: 3.75rem;
+    color: var(--cor1);
 }
 .p-sobre {
-  color: var(--cor1);
+    color: var(--cor1);
 }
 
 .button-sobre {
-  background-color: var(--cor1);
-  color: #FFFFFF;
-  padding: 1.5rem 3.5rem;
-  border-radius: 2.5rem;
-  width: 16.125rem;
-  border: none;
-  font-size: 1.375rem;
+    background-color: var(--cor1);
+    color: #ffffff;
+    padding: 1.5rem 3.5rem;
+    border-radius: 2.5rem;
+    width: 16.125rem;
+    border: none;
+    font-size: 1.375rem;
 }
 
 .img-sobre {
-  display: flex;
-  gap: 3.75rem;
+    display: flex;
+    gap: 3.75rem;
 }
 
 .header {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  margin: 2rem 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin: 2rem 0;
 }
 
 .ul {
-  display: flex;
-  list-style: none;
-  gap: 3.125rem;
-  
-  li * {
-    text-decoration: none;
-    color: var(--cor1);
-    font-size: 1.75rem;
-  }
+    display: flex;
+    list-style: none;
+    gap: 3.125rem;
+
+    li * {
+        text-decoration: none;
+        color: var(--cor1);
+        font-size: 1.75rem;
+    }
 }
 
-
-
 .title-plan {
-  color: #131925;
-  text-align: center;
-  margin-bottom: 1.438rem;
+    color: #131925;
+    text-align: center;
+    margin-bottom: 1.438rem;
 }
 
 .bottom-sobre {
-  display: flex;
-  justify-content: center;
-  gap: 11px;
+    display: flex;
+    justify-content: center;
+    gap: 11px;
 }
 
 .borda {
-  box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.349);
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-  width: 240px;
-  height: 28.938rem;
-  align-items: center;
+    box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.349);
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    width: 240px;
+    height: 28.938rem;
+    align-items: center;
+}
+
+section.contato {
+    display: flex;
+    justify-content: space-around;
+    height: 100vh;
+
+    .left {
+        width: 40%;
+        display: flex;
+        flex-direction: column;
+
+        h2 {
+          max-width: 80%;
+          margin: 0 auto;
+        }
+    }
+
+    .line {
+        height: 100%;
+        width: 1px;
+        background-color: var(--cor1);
+    }
+
+    .right {
+        width: 40%;
+
+        .form {
+            display: flex;
+            flex-direction: column;
+            width: 80%;
+        }
+    }
+}
+
+textarea {
+    resize: none;
 }
