--- a/src/index.css
+++ b/src/index.css
@@ -9,6 +9,10 @@
     --cor1: #333;
 }
 
+button {
+  color: #FFF;
+}
+
 .card-Youtube {
     background-color: #f1c2b0;
 }
@@ -86,7 +90,7 @@
 .bottom-sobre {
     display: flex;
     justify-content: center;
-    gap: 11px;
+    gap: 15px;
 }
 
 .borda {
@@ -97,7 +101,66 @@
     width: 240px;
     height: 28.938rem;
     align-items: center;
+    margin-bottom: 4rem;
+    border-radius: 30px 30px 0 0;
 }
+
+.nome {
+  display: flex;
+  align-items: center;
+  height: 74px;
+}
+
+.card-Individual {
+  background-color: #6975E8;
+  height: 74px;
+  width: 240px;
+  border-radius: 30px 30px 0 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.box-card {
+  box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.349);
+  border-radius: 30px;
+  width: 225px;
+  height: 32px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 18px;
+}
+
+.box-card span {
+  font-size: 12px;
+  color: #131925;
+}
+
+.card-span {
+  color: #8790A3;
+  font-size: 12px;
+ 
+}
+
+.card-btn {
+  width: 225px;
+  height: 34px;
+  border-radius: 6px;
+  border: 1px #929292 solid;
+  font-weight: bold;
+  margin-bottom: 13px;
+}
+
+.card-Corporativo {
+ color: #2F2E41;
+}
+
+.card-Profissional-Times {
+  color: #2F2E41;
+}
+
+
 
 section.contato {
     display: flex;
