--- a/src/index.css
+++ b/src/index.css
@@ -165,17 +165,14 @@ button {
 section.contato {
     display: flex;
     justify-content: space-around;
+    padding: 2rem 7rem;
     height: 100vh;
 
     .left {
         width: 40%;
         display: flex;
         flex-direction: column;
-
-        h2 {
-          max-width: 80%;
-          margin: 0 auto;
-        }
+        gap: 4rem;
     }
 
     .line {
@@ -190,7 +187,48 @@ section.contato {
         .form {
             display: flex;
             flex-direction: column;
-            width: 80%;
+            width: 100%;
+
+            div {
+                display: flex;
+                gap: 1rem;
+                margin-bottom: 2rem;
+                justify-content: end;
+            }
+
+            label {
+                font-weight: 500;
+                color: var(--cor1);
+                font-size: 1.5rem;
+                display: inline;
+            }
+
+            input {
+                border-radius: 1rem;
+                padding: 0.5rem;
+                border: none;
+                outline: none;
+                box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.212);
+                width: 100%;
+            }
+
+            textarea {
+                border-radius: 1rem;
+                padding: 0.5rem;
+                height: 8rem;
+                border: none;
+                outline: none;
+                box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.212);
+                margin: 2rem 0;
+            }
+
+            button {
+                width: 30%;
+                border-radius: 8px;
+                background: #6975E8;
+                border: 0;
+                padding: 0.5rem;
+            }
         }
     }
 }
@@ -277,4 +315,9 @@ textarea {
     font-size: 64px;
     color: #FFF;
     
+}
+
+a.active {
+    text-decoration: underline;
+    color: var(--cor1);
 }
